Deployed  with MkDocs version: 1.0.4

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 <ul>
 <li><strong>Type Annotation Powered</strong>: Utilize your function's existing type annotations to build dozens of test cases automatically.</li>
 <li><strong>Low Barrier</strong>: Start utilizing property-based testing in the lowest barrier way possible. Just run <code>auto_test(FUNCTION)</code> to run dozens of test.</li>
-<li><strong>py.test Compatible</strong>: Built-n compatibility with the popular <a href="https://docs.pytest.org/en/latest/">py.test</a> testing framework. This means that you can turn your automatically generated tests into individual py.test test cases with one line.</li>
+<li><strong>py.test Compatible</strong>: Built-in compatibility with the popular <a href="https://docs.pytest.org/en/latest/">py.test</a> testing framework. This means that you can turn your automatically generated tests into individual py.test test cases with one line.</li>
 <li><strong>Scales Up</strong>: As you find your self needing to customize your auto_test cases, you can easily utilize all the features of <a href="https://hypothesis.readthedocs.io/en/latest/">Hypothesis</a>, including custom strategies per a parameter.</li>
 </ul>
 <h2 id="installation">Installation:</h2>
