Deployed  with MkDocs version: 1.0.4

--- a/CHANGELOG/index.html
+++ b/CHANGELOG/index.html
@@ -443,6 +443,7 @@
 <p>OR</p>
 <p><code>pipenv install hypothesis-auto</code></p>
 <h1 id="changelog">Changelog</h1>
+<h2 id="110-18-september-2019">1.1.0 - 18 September 2019</h2>
 <div class="admonition danger">
 <p class="admonition-title">Danger</p>
 <p>This release contains breaking changes. In particular to how parameters are passed in to testing functions.</p>
