Deployed  with MkDocs version: 1.0.4

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 <h2 id="usage-examples">Usage Examples:</h2>
 <div class="admonition warning">
 <p class="admonition-title">Warning</p>
-<p>In old usage examples you will see <code>_</code> prefixed parameters like <code>_auto_verify=</code> to avoid conflicted with existing function parameters.
+<p>In old usage examples you will see <code>_</code> prefixed parameters like <code>_auto_verify=</code>. This was done to avoid conflicting with existing function parameters.
 Based on community feedback the project switched to <code>_</code> suffixes, such as <code>auto_verify_=</code> to keep the likely hood of conflicting low while
 avoiding the connotation of private parameters.</p>
 </div>
