Deployed  with MkDocs version: 1.0.4

--- a/CHANGELOG/index.html
+++ b/CHANGELOG/index.html
@@ -443,6 +443,10 @@
 <p>OR</p>
 <p><code>pipenv install hypothesis-auto</code></p>
 <h1 id="changelog">Changelog</h1>
+<h2 id="111-19-september-2019">1.1.1 - 19 September 2019</h2>
+<ul>
+<li>Fixed <a href="https://github.com/timothycrosley/hypothesis-auto/issues/5">Issue #5</a>: typo in Scenario class name</li>
+</ul>
 <h2 id="110-18-september-2019">1.1.0 - 18 September 2019</h2>
 <div class="admonition danger">
 <p class="admonition-title">Danger</p>
@@ -450,7 +454,7 @@
 </div>
 <ul>
 <li><code>_prefixing</code> for parameters was replaced with <code>suffixing_</code> to avoid private implication while still avoiding parameter name conflicts.</li>
-<li>Custom <code>auto_verify_</code> function now must take a single <a href="https://timothycrosley.github.io/hypothesis-auto/reference/hypothesis_auto/tester/#scenerio"><code>Scenerio</code></a> object.</li>
+<li>Custom <code>auto_verify_</code> function now must take a single <a href="https://timothycrosley.github.io/hypothesis-auto/reference/hypothesis_auto/tester/#scenario"><code>Scenario</code></a> object.</li>
 </ul>
 <h2 id="100-17-september-2019">1.0.0 - 17 September 2019</h2>
 <ul>
