--- a/CHANGELOG/index.html
+++ b/CHANGELOG/index.html
@@ -443,6 +443,10 @@
 <p>OR</p>
 <p><code>pipenv install hypothesis-auto</code></p>
 <h1 id="changelog">Changelog</h1>
+<h2 id="112-24-september-2019">1.1.2 - 24 September 2019</h2>
+<ul>
+<li>Fixed custom strategies not being passed through for pytest integration methods.</li>
+</ul>
 <h2 id="111-19-september-2019">1.1.1 - 19 September 2019</h2>
 <ul>
 <li>Fixed <a href="https://github.com/timothycrosley/hypothesis-auto/issues/5">Issue #5</a>: typo in Scenario class name</li>
